--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
             rel="stylesheet"
         />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Main Styles -->
         <link rel="stylesheet" href="./css/style.css" />
     </head>
@@ -62,7 +63,6 @@
             Steps Section
             -->
 
-            <!--
             <section class="steps text-center">
                 <div class="container">
                     <h2>Come Funziona</h2>
@@ -106,13 +106,11 @@
                     </div>
                 </div>
             </section>
-            -->
-
 
             <!--
             Why Us Section
             -->
-            <!--
+
             <section class="why-us">
                 <div class="container">
                     <h2 class="text-center">Perchè Boolean Academy</h2>
@@ -148,7 +146,6 @@
                     </div>
                 </div>
             </section>
-             -->
         </main>
     </body>
 </html>
